--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     </header>    
             <div class="frame">
-                <img src="/images/quarters.jpg" alt="Image not available">
+                <img src="images/quarters.jpg" alt="Image not available"> 
                 <div class="img-caption">
                     <p> Capturing more than the eye can in cityscapes, landscapes, stilllife, people, nature and architecture.</p>
                 </div>
