--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@
     <h1>Want to Get in Touch?</h1>
     
     <div class="frame">
-        <img src="/images/contact.jpg" alt="Image not available.">
+        <img src="images/contact.jpg" alt="Image not available.">
     </div>
 
     <div class="contact-info">
